--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,6 +8,6 @@
 
 body {
   background-color: rgb(26, 33, 55);
-  background-image: linear-gradient(to top, #5f72bd 0%, #9b23ea 100%);
+  background-image: linear-gradient(to top, #afbdf8 0%, #867feb 100%);
   color: white;
 }
